--- a/preamble.tex
+++ b/preamble.tex
@@ -55,7 +55,7 @@
 \newcommand{\betar}{\rightarrow_\beta} %beta-reduction
 \newcommand{\alphae}{\equiv_\alpha} %alpha-equivalence
 \newcommand{\betae}{\equiv_\beta} %beta-equivalence
-\newcommand{\stlc}{$\lambda_{->}$\xspace} %simply typed lambda calculus
+\newcommand{\stlc}{\ensuremath{\lambda_{->}}\xspace} %simply typed lambda calculus
 \newcommand{\hole}[1]{\llparenthesis \ \rrparenthesis_#1} %hole, subscripted with a sort
 \newcommand{\ctxhole}{[ \, \cdot \, ]} %context hole
 \newcommand{\fix}{\text{fix}\xspace} %correct fix
